<resources>
	<string name="app_name">Trivia</string>
	<string name="title">Trivia</string>
	<string name="quest_no">Question : %d/%d</string>
	<string name="true_text">True</string>
	<string name="false_text">False</string>
	<string name="next_text">Next</string>
	<string name="correct_answer">Correct!</string>
	<string name="wrong_answer">Incorrect!</string>
	<string name="question_hint">Question</string>
	<string name="score_text">Score : </string>
	<string name="init_score">0</string>
	<string name="highest_score">Highest Score : </string>
</resources>