<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
	<data>

	</data>
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:context=".MainActivity"
			android:background="@color/blue_900">

		<TextView
				android:id="@+id/title"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.05"
				android:text="@string/title"
				android:textSize="20dp"
				android:textStyle="bold"
				android:textAllCaps="true"
				android:textColor="@color/purple_200"
				style="@style/main_text"
		/>

		<TextView
				android:id="@+id/highest_score_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toRightOf="@+id/title"
				app:layout_constraintRight_toLeftOf="@id/highest_score_view"
				app:layout_constraintHorizontal_bias="0.7"
				style="@style/main_text"
				android:text="@string/highest_score"
				app:layout_constraintHorizontal_chainStyle="packed"/>

		<TextView
				android:id="@+id/highest_score_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toRightOf="@+id/highest_score_label"
				app:layout_constraintRight_toRightOf="parent"
				style="@style/main_text"
		/>

		<TextView
				android:id="@+id/question_no"
				app:layout_constraintTop_toBottomOf="@id/title"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.075"
				android:text="@string/quest_no"
				android:textColor="@color/teal_700"
				android:layout_marginTop="25dp"
				style="@style/main_text"
		/>

		<TextView
				android:id="@+id/score_label"
				app:layout_constraintTop_toBottomOf="@id/title"
				app:layout_constraintStart_toStartOf="@id/question_no"
				app:layout_constraintEnd_toStartOf="@id/score_view"
				app:layout_constraintHorizontal_bias="0.75"
				android:text="@string/score_text"
				android:layout_marginTop="25dp"
				android:enabled="false"
				style="@style/main_text"
				app:layout_constraintHorizontal_chainStyle="packed"/>

		<TextView
				android:id="@+id/score_view"
				app:layout_constraintTop_toBottomOf="@id/title"
				app:layout_constraintLeft_toRightOf="@id/score_label"
				app:layout_constraintEnd_toEndOf="parent"
				android:text="@string/init_score"
				android:layout_marginTop="25dp"
				style="@style/main_text"
				app:layout_constraintStart_toEndOf="@+id/score_label"
		/>

		<androidx.cardview.widget.CardView
				android:id="@+id/card_view"
				app:layout_constraintTop_toTopOf="@id/question_no"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:layout_marginTop="50dp"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:elevation="20dp"
				app:cardBackgroundColor="@color/blue_900"
		>
			<FrameLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:background="@drawable/rectangle_border">

				<TextView
						android:id="@+id/question_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="20dp"
						android:layout_margin="5dp"
						android:textColor="@color/white"
						android:textStyle="italic"
				/>

			</FrameLayout>

		</androidx.cardview.widget.CardView>

		<Button
				android:id="@+id/true_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/card_view"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:backgroundTint="@color/blue_700"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="60dp"
				android:text="@string/true_text"
				android:padding="@dimen/button_padding"
		/>

		<Button
				android:id="@+id/false_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/true_button"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:backgroundTint="@color/blue_700"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:text="@string/false_text"
				android:padding="@dimen/button_padding"
		/>

		<Button
				android:id="@+id/next_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/false_button"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.8"
				android:layout_marginTop="50dp"
				android:text="@string/next_text"
				android:padding="@dimen/button_padding"
		/>


	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>